# wicap

./: CMakeLists.txt  README.txt  mg_wifi.c  mg_wifi.h  picocap.c  picocap.h  picocap.pio  wicap.c
firmware/: cyfmac43439-sdio.c  cyfmac43439-sdio_clm.c  fw_43439.c
picowi/: picowi_auth.h  picowi_defs.h  picowi_event.c  picowi_init.c  picowi_ioctl.c  picowi_join.c  picowi_join.h  picowi_pico.c  picowi_pico.h
test/: rpscope.html
